--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -4,9 +4,14 @@
     <string name="login_password">Password</string>
     <string name="login">Log In</string>
     <string name="create_account">Create account</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="start_routine">Start</string>
+    <string name="add_to_favourite">Add to favourite</string>
+    <string name="routine_name_text">Routine name</string>
+    <string name="estimated_time">Estimated time</string>
+    <string name="time_icon">Time icon</string>
+    <string name="rating">Rating:</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="settings">Settings</string>
     <string name="history">History</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
