--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -14,4 +14,14 @@
     <string name="edit_profile">Edit Profile</string>
     <string name="settings">Settings</string>
     <string name="history">History</string>
+    <string name="exercise">Exercise Name</string>
+    <string name="last_exercise">Last exercise</string>
+    <string name="next_exercise">Next exercise</string>
+    <string name="pause_exercise">Pause exercise</string>
+    <string name="exercise_image">Exercise image</string>
+    <string name="routine_name">Routine Name</string>
+    <string name="exerciseCounter">3/15</string>
+    <string name="chrono">1:00</string>
+    <string name="description">Description</string>
+    <string name="exit">Exit</string>
 </resources>
