--- a/QuickFitness/app/src/main/res/values-es/strings.xml
+++ b/QuickFitness/app/src/main/res/values-es/strings.xml
@@ -23,4 +23,8 @@
     <string name="chrono">1:00</string>
     <string name="description">Description</string>
     <string name="exit">Salir</string>
+    <string name="home">Home</string>
+    <string name="search">Buscar</string>
+    <string name="profile">Profile</string>
+    <string name="favourites">Favourites</string>
 </resources>
