--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="chrono">1:00</string>
     <string name="description">Description</string>
     <string name="exit">Exit</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="profile">Profile</string>
+    <string name="favourites">Favourites</string>
 </resources>
