--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="start_routine">Start</string>
     <string name="add_to_favourite">Add to favourite</string>
     <string name="routine_name_text">Routine name</string>
-    <string name="estimated_time">Estimated time</string>
+    <string name="estimated_time">Estimated time:</string>
     <string name="time_icon">Time icon</string>
     <string name="rating">Rating:</string>
     <string name="edit_profile">Edit Profile</string>
@@ -30,4 +30,8 @@
     <string name="favourites">Favourites</string>
     <string name="recent_routines">Recent Routines</string>
     <string name="discover">Discover</string>
+    <string name="creator">Creator:</string>
+    <string name="name">name</string>
+    <string name="_1">1</string>
+    <string name="_3">3</string>
 </resources>
