--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="name">name</string>
     <string name="_1">1</string>
     <string name="_3">3</string>
+    <string name="logout">Logout</string>
 </resources>
