--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -35,4 +35,11 @@
     <string name="_1">1</string>
     <string name="_3">3</string>
     <string name="logout">Logout</string>
+    <string name="difficulty">Difficulty</string>
+    <string name="insert_password">Insert password</string>
+    <string name="insert_username">Insert username</string>
+    <string name="invalid_username">Invalid Username</string>
+    <string name="invalid_password">Invalid Password</string>
+    <string name="login_error">Incorrect username or password</string>
+
 </resources>
