--- a/QuickFitness/app/src/main/res/values-es/strings.xml
+++ b/QuickFitness/app/src/main/res/values-es/strings.xml
@@ -41,4 +41,5 @@
     <string name="invalid_username">Usuario invalido</string>
     <string name="invalid_password">Contraseña invalida</string>
     <string name="login_error">Nombre de usuario o contraseña incorrectos</string>
+    <string name="showpassword">ShowPassword</string>
 </resources>
