--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">QuickFitness</string>
+    <string name="app_name">QuickFitness</string>
     <string name="login_name">Username</string>
     <string name="login_password">Password</string>
     <string name="login">Log In</string>
@@ -41,5 +41,6 @@
     <string name="invalid_username">Invalid Username</string>
     <string name="invalid_password">Invalid Password</string>
     <string name="login_error">Incorrect username or password</string>
+    <string name="showpassword">ShowPassword</string>
 
 </resources>
