--- a/QuickFitness/app/src/main/res/values-es/strings.xml
+++ b/QuickFitness/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">QuickFitness</string>
-    <string name="login_name">Nombre</string>
+    <string name="login_name">Nombre Usuario</string>
     <string name="login_password">Contraseña</string>
     <string name="login">Iniciar Sesión</string>
     <string name="create_account">Crear Cuenta</string>
@@ -36,8 +36,8 @@
     <string name="_3">3</string>
     <string name="logout">Cerrar sesión</string>
     <string name="difficulty">Dificultad</string>
-    <string name="insert_password">Ingrese contraseña</string>
-    <string name="insert_username">Ingrese username</string>
+    <string name="insert_password">Ingresar contraseña</string>
+    <string name="insert_username">Ingresar nombre usuario</string>
     <string name="invalid_username">Usuario invalido</string>
     <string name="invalid_password">Contraseña invalida</string>
     <string name="login_error">Nombre de usuario o contraseña incorrectos</string>
