--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
     <string name="name_input">Name*</string>
     <string name="code">Code*</string>
     <string name="verify">Verify</string>
+    <string name="a_verification_code_was_sent_to">A code was sent to</string>
+    <string name="example_email_com">example@email.com</string>
 
 </resources>
