--- a/QuickFitness/app/src/main/res/values/strings.xml
+++ b/QuickFitness/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="_1">1</string>
     <string name="_3">3</string>
     <string name="logout">Logout</string>
-    <string name="difficulty">Difficulty</string>
+    <string name="difficulty">Difficulty: </string>
     <string name="insert_password">Insert password</string>
     <string name="insert_username">Insert username</string>
     <string name="invalid_username">Invalid Username</string>
