--- a/QuickFitness/app/src/main/res/values-es/strings.xml
+++ b/QuickFitness/app/src/main/res/values-es/strings.xml
@@ -55,4 +55,5 @@
     <string name="verify">Verificar</string>
     <string name="a_verification_code_was_sent_to">Se envió un código a</string>
     <string name="example_email_com">example@email.com</string>
+    <string name="routine_times">Veces</string>
 </resources>
